<resources>
    <string name="app_name">Analyze network with subnetwork trace</string>
    <string name="trace_options">Trace options:</string>
    <string name="include_barriers">Include barriers</string>
    <string name="include_containers">Include containers</string>
    <string name="define_new_condition">Define new condition:</string>
    <string name="example_condition">Example barrier condition for this data:\n\'Transformer Load\' EQUAL \'15\'</string>
    <string name="falseText">False</string>
    <string name="trueText">True</string>
    <string name="add_condition">Add condition</string>
    <string name="barrier_conditions">Barrier conditions:</string>
    <string name="trace">Trace</string>
    <string name="reset">Reset</string>
    <string name="utility_network_url">https://sampleserver7.arcgisonline.com/server/rest/services/UtilityNetwork/NapervilleElectric/FeatureServer</string>
    <string name="select_source">Select source</string>
    <string name="select_operator">Select operator</string>
    <string name="select_value">Select value</string>
    <string name="value">Value</string>
    <string name="loading_subnetwork_trace">Loading subnetwork trace</string>
</resources>
